--- a/Mintlemonade/style.css
+++ b/Mintlemonade/style.css
@@ -9,3 +9,19 @@ h2{
 .shapes{
     background-color: black;
 }
+#triangle{
+    background-color: green;
+    margin: 3px;
+}
+#square{
+    background-color: blue;
+    margin: 3px;
+}
+#rectangle{
+    background-color: yellow;
+    margin: 3px;
+}
+#circle{
+    background-color: red;
+    margin: 3px;
+}
