--- a/Mintlemonade/style.css
+++ b/Mintlemonade/style.css
@@ -28,6 +28,7 @@ h2{
     height: 150px;
     width: 150px;
     background: white;
+    margin: 3px;
 }
 #rectangle{
     background-color: yellow;
@@ -36,6 +37,14 @@ h2{
     /*float: left*/;
     width: 24%;
 }
+
+#therectangle{
+    height: 150px;
+    width: 200px;
+    background: white;
+    margin: 3px;
+}
+
 #circle{
     background-color: red;
     margin: 3px;
