--- a/Mintlemonade/style.css
+++ b/Mintlemonade/style.css
@@ -59,3 +59,12 @@ h2{
     /*float: left;*/
     width: 24%;
 }
+#thecircle{
+    width: 150px;
+    height: 150px;
+    background: white;
+    -moz-border-radius: 75px;
+    -webkit-border-radius: 75px;
+    border-radius: 75px;
+    margin: 3px;
+}
